--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #000000;
+    --foreground: #000000;
   }
 }
 
@@ -24,3 +24,15 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* @font-face {
+  font-family: 'HamburgHand-Regular';
+  src: url('') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+.font-HamburgHand-Regular {
+  font-family: 'HamburgHand-Regular';
+} */
