--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #000000;
-    --foreground: #000000;
+    --background: #0A0A0A;
+    --foreground: #0A0A0A;
   }
 }
 
