--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,17 +22,20 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
-/* @font-face {
-  font-family: 'HamburgHand-Regular';
-  src: url('') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+
+@font-face {
+  font-family: 'AvantGarde-Bold';
+  src: url('/font/ITCAvantGardeStd-Bold.ttf') format('opentype');
+  font-weight: 900;
+  font-style: bold;
 }
 
-.font-HamburgHand-Regular {
-  font-family: 'HamburgHand-Regular';
-} */
+
+
+/* Add other weights/styles as needed */
+.AvantGarde-Bold {
+  font-family: 'AvantGarde-Bold';
+} 
